Criar wrapper generico de resposta e modificar nomes KAN#3
